# covins

./: .gitignore  covins_updated.rviz  docker-compose.yml  progress.md  projectBrief.md  runInstruction.md  techContext.md
covins_backend/include/covins/covins_backend/: communicator_be.hpp
covins_backend/src/covins_backend/: communicator_be.cpp
covins_comm/: CMakeLists.txt  package.xml
covins_comm/config/: config_comm.yaml
covins_comm/include/covins/comm_abstraction/: CommunicatorFactory.hpp  ICommunicator.hpp  IMessage.hpp  ISerializer.hpp
covins_comm/include/covins/comm_messages/: MsgImage.hpp  MsgKeyframe.hpp  MsgLandmark.hpp  MsgOdometry.hpp  PreintegrationData.hpp
covins_comm/include/covins/comm_protocols/: Ros1Communicator.hpp  Ros2Communicator.hpp  TcpSocketCommunicator.hpp
covins_comm/include/covins/comm_serialization/: CerealSerializer.hpp  ISerializer.hpp  ProtobufSerializer.hpp
covins_comm/include/covins/covins_base/: cereal_types_base.hpp  config_comm.hpp  ros_conversion.hpp  typedefs_base.hpp  vi_calibration.hpp
covins_comm/proto/: data_buffer.proto
covins_comm/src/comm_abstraction/: CommunicatorFactory.cpp  ICommunicator.cpp  IMessage.cpp  ISerializer.cpp
covins_comm/src/comm_messages/: MsgImage.cpp  MsgKeyframe.cpp  MsgLandmark.cpp  MsgOdometry.cpp  PreintegrationData.cpp
covins_comm/src/comm_protocols/: Ros1Communicator.cpp  TcpSocketCommunicator.cpp
covins_comm/src/comm_serialization/: CerealSerializer.cpp  ProtobufSerializer.cpp
covins_comm/src/covins_base/: MsgImage.cpp  config_comm.cpp  ros_conversion.cpp
covins_comm_ros2/: CMakeLists.txt  package.xml
covins_comm_ros2/include/: comm_ros2_bridge.hpp  ros_conversion.hpp
covins_comm_ros2/src/: comm_ros2_bridge.cpp  ros_conversion.cpp
covins_frontend/src/: frontend_node.cpp  frontend_wrapper.cpp  frontend_wrapper.hpp
covins_msgs/: CMakeLists.txt  package.xml
covins_msgs/msg/: Landmark.msg  Observation.msg
docker/: run_new.sh  run_new_rgbd.sh
docs/: COVINS + ORB-SLAM3 Docker Full Run Guide Shir  COVINS GAZEBO Trajectory Evaluation.md  COVINS Trajectory Evaluation.md  COVINS_ORB-SLAM3_Docker_2_AGENTS_Full_Guide_Shir.md  COVINS_ORB-SLAM3_Docker_Full_Guide_Shir.md  Connecting_COVINS_with_Gazebo.md  Convert GT from EuRoC to TUM format.md  build_and_run_docker_base_dev.md
orb_slam3/: CMakeLists.txt
orb_slam3/Examples/: real_camera_hector.yaml  real_camera_hector_rgbd.yaml  real_camera_turtlebot3.yaml
orb_slam3/Examples/Monocular/: EuRoC.yaml
orb_slam3/Examples/Monocular-Inertial/: GoogleCellphone.yaml
orb_slam3/Examples/ROS/ORB_SLAM3/launch/: launch_docker_ros_euroc_agent1.launch  launch_docker_ros_euroc_agent2  launch_docker_ros_euroc_gazebo_hector.launch  launch_docker_ros_gazebo.launch  launch_docker_ros_gazebo_agent0  launch_docker_ros_gazebo_agent1.launch  launch_docker_ros_gazebo_hector_rgbd.launch
orb_slam3/include/: ImuTypes.h  KeyFrame.h  LocalMapping.h  MapPoint.h  System.h
orb_slam3/include/comm/: communicator.hpp
orb_slam3/src/: LocalMapping.cc  MapPoint.cc  System.cc  Tracking.cc
orb_slam3/src/comm/: communicator.cpp
sparx_docker/: .dockerignore  Dockerfile.base  Dockerfile.dev  run.sh
sparx_docker/.devcontainer/: devcontainer.json
sparx_ros2_docker/: Dockerfile.base
