<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>covins_comm</name>
  <version>1.0.0</version>
  <description>covins</description>

  <maintainer email="collaborative.slam@gmail.com"> </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>cmake_modules</depend>
  <depend>opencv3_catkin</depend>
  <depend>glog_catkin</depend>

  <!-- NEW DEPENDENCIES FOR COMMUNICATION ABSTRACTION -->
  <build_depend>protobuf</build_depend>
  <exec_depend>protobuf</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend> <!-- Added for Ros1Communicator -->
  <depend>image_transport</depend> <!-- Added for Ros1Communicator -->
  <depend>cv_bridge</depend> <!-- Added for Ros1Communicator -->
  <depend>message_filters</depend> <!-- Added for Ros1Communicator -->
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- End of NEW DEPENDENCIES -->

  <export></export>
</package>
