<?xml version="1.0"?>
<package format="3">
  <name>covins_comm_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 bridge for COVINS communication and message conversion.</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>covins_msgs</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>covins_msgs</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>